[gd_scene load_steps=8 format=3 uid="uid://bgsbldnouau8u"]

[ext_resource type="Script" uid="uid://4wfd6s7a8g5r" path="res://scenes/menuscreen.gd" id="1_36wy4"]
[ext_resource type="Texture2D" uid="uid://crbkgau83gwj7" path="res://assets/graphics/button/playbutton1.png" id="2_pis2g"]
[ext_resource type="Texture2D" uid="uid://cbm2suyigqkmi" path="res://assets/graphics/button/playbutton2.png" id="3_dag5g"]
[ext_resource type="Texture2D" uid="uid://dbdvvwbic8uc1" path="res://assets/graphics/backgrounds/MainMenu.png" id="4_dag5g"]
[ext_resource type="AudioStream" uid="uid://m6jrrttrtoy1" path="res://assets/sfx/Click.wav" id="5_7cjh5"]
[ext_resource type="AudioStream" uid="uid://cqoayuq5ywrxs" path="res://assets/sfx/menu_music.mp3" id="6_wesrc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7cjh5"]
texture = ExtResource("4_dag5g")

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36wy4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7cjh5")

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.9999
offset_top = 108.0
offset_right = 31.0001
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.12, 2.08)
pivot_offset = Vector2(31, 31)
texture_normal = ExtResource("2_pis2g")
texture_pressed = ExtResource("3_dag5g")

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7cjh5")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wesrc")

[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
